2010-04-03  Eli Zaretskii  <eliz@gnu.org>

	* bidi.c (bidi_resolve_explicit, bidi_level_of_next_char): Check
	bidi_it->bytepos against ZV_BYTE instead of bidi_it->ch against
	BIDI_EOB.  Fixes infloop with vertical cursor motion at ZV.

	* w32fns.c (x_create_tip_frame): Copy `parms' before we modify it
	in this function.  (Bug#5703)

2010-04-03  Chong Yidong  <cyd@stupidchicken.com>

	* nsterm.h: Fix last change.

2010-04-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/intel386.h (NO_REMAP): Move definition ...
	* s/msdos.h (NO_REMAP): ... here.

	* m/vax.h (CRT0_DUMMIES): Remove, unused.

	* ecrt0.c: Remove MSDOS, m68k and __sparc__ conditionals, file not
	used on those platforms.

2010-04-02  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove extern errno declarations.
	* xterm.c:
	* xrdb.c:
	* w32term.c:
	* unexec.c:
	* unexaix.c:
	* sysdep.c:
	* process.c:
	* lread.c:
	* keyboard.c:
	* floatfns.c:
	* filelock.c:
	* fileio.c:
	* emacs.c (main):
	* ecrt0.c:
	* dispnew.c:
	* callproc.c:
	* buffer.c: Remove errno extern declarations.
	* s/netbsd.h (NEED_ERRNO): Remove.

2010-04-01  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove all uses of LIBX11_SYSTEM.
	* Makefile.in (LIBX11_SYSTEM): Remove.
	* s/msdos.h (LIBX11_SYSTEM): Do not define, define LIBS_SYSTEM
	instead.

2010-04-01  Eli Zaretskii  <eliz@gnu.org>

	Remove support for DJGPP v1.x (bug#5813).

	* w16select.c (__dpmi_int): Remove DJGPP v1.x compatibility.
	* s/msdos.h:
	* unexec.c (make_hdr, copy_text_and_data):
	* sysdep.c (wait_for_termination, sys_subshell):
	* msdos.c (dos_set_window_size, msdos_set_cursor_shape)
	(IT_set_terminal_modes, __write, _rename, gethostname)
	(gettimeofday, alarm, fork, kill, dos_ttraw, dos_ttcooked)
	(run_msdos_command, abort): Remove DJGPP v1.x code and tests of
	the value of __DJGPP__.
	(nice, pause, sigsetmask, sigblock): Remove DJGPP v1.x
	compatibility code.
	* lread.c:
	* gmalloc.c (memalign):
	* fileio.c (Fcopy_file, check_executable, Ffile_modes):
	* emacs.c (main):